<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginFragment">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="@dimen/tv_title_login_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tv_title_login_margin_start"
        android:layout_marginTop="@dimen/tv_title_margin_top"
        android:layout_marginEnd="@dimen/tv_title_login_margin_end"
        android:text="@string/text_title_login"
        android:textSize="@dimen/tv_title_login_size"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/email_login_margin_start"
        android:layout_marginTop="@dimen/email_login_margin_top"
        android:layout_marginEnd="@dimen/email_login_margin_end"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edt_password_login"
        android:layout_width="@dimen/password_login_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/password_login_margin_start"
        android:layout_marginTop="@dimen/password_login_margin_top"
        android:layout_marginEnd="@dimen/password_login_margin_end"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_login"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/button_login_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_login_margin_top"
        android:layout_marginHorizontal="@dimen/button_login_margin_horizontal"
        android:text="@string/text_button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_login" />

    <ProgressBar
        android:id="@+id/pb_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>