<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_item_user"
    android:elevation="@dimen/elevation_card_item_user"
    app:cardCornerRadius="@dimen/corner_radius_card_item_user">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_item_nama_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_title_name_margin_top"
            android:text="@string/text_nama_item_user"
            android:textColor="@color/black"
            android:textSize="@dimen/card_title_name_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_email_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_title_email_margin_top"
            android:text="@string/text_email_item_user"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/card_title_email_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_nama_user" />

        <TextView
            android:id="@+id/tv_item_no_handphone_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_no_handphone_margin_top"
            android:layout_marginBottom="@dimen/item_no_handphone_margin_bottom"
            android:text="@string/item_text_no_handphone"
            android:textColor="@color/black"
            android:textSize="@dimen/item_no_handphone_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_email_user" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>